--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ledgerhq/hw-transport-u2f": "^4.68.2",
-    "@ledgerhq/hw-transport-webauthn": "^4.68.2",
-    "@ledgerhq/hw-transport-webusb": "^4.68.2",
-    "@ledgerhq/live-common": "^7.8.0",
-    "algosdk": "^1.2.1",
-    "bn.js": "^5.0.0",
-    "promise-queue": "^2.2.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "rxjs": "^6.5.2"
+    "@ledgerhq/hw-transport-u2f": "^4.68.2",
+    "@ledgerhq/hw-transport-webauthn": "^4.68.2",
+    "@ledgerhq/hw-transport-webusb": "^4.68.2",
+    "algosdk": "^1.2.1",
+    "bn.js": "^5.0.0",
+    "promise-queue": "^2.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
